Minor changes to both account and settings Settings page no longer stretches with a hover over buttons Settings page PFP also no longer incorrect size Account page PFP now own sizing Navbar size is corrected with correct spacing and size

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -83,6 +83,14 @@
   user-select: none;
 }
 
+.adjustable-avatar {
+  width: 100%; 
+  height: auto;
+  max-width: 100px; /* Sets the maximum size */
+  aspect-ratio: 1 / 1; 
+  user-select: none;
+}
+
 .dropdown {
   position: absolute;
   right: 0;
